--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -7,6 +7,10 @@
     background-repeat: no-repeat;    
 }
 
+.home-header--product {
+    background-image: url(https://s3-alpha-sig.figma.com/img/1668/eebb/f783e7fb166a8ba11a87611bccc3c5f2?Expires=1704672000&Signature=H4v-QqX3kE4lemLZsiQNUQs9v9v9ppUhBu0F-pP~1StQFCgLL~0OGnPNmEGHcaArbXjFmcmUAgBqUvEA4vrA9dzR4ELbCO0z1ZJXPEHiPX6cgaFt1v~TQGLh~MFDXegkpayvwdMBJhxHTTw~6MdyZ2QvIG7F5bJKTguqFmU7~H-Joih3WFhwCvAyQCYjZya0kh8BgGUvpq5cvZYHP3M0yV1leIv8J-3MqhL5p3YMGGiuRgYScsEUoZjKpAF1Ls8sNkMM4lo~SXy4b4w8jtEXMKjQMKOYvv1jPud2-wvllmQyyG~RSZixhDHfPr4x4D8SPUsTJyz776WRPr6SvdBiyw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4); 
+}
+
 .wrapper {
     position: relative;
     height: var(--header-height);
@@ -319,11 +323,11 @@
 
 .header-partner__list-item-img {
     height: 80px;
-    width: 150px;
+    width: 100%;
 }
 
 .header-partner__list {
-    width: 1200px;
+    width: 100%;
     list-style: none;
     display: flex;
     justify-content: space-between;
@@ -414,9 +418,9 @@
 /* Honey moon */
 
 .honey-moon__image-main {
-    width: 476px;
-    height: 692px;
-    border-radius: 250px 250px 0 0 ;
+    width: 100%;
+    max-height: 692px;
+    border-radius: 250px 250px 0 0;
     position: relative;
 }
 
@@ -492,8 +496,8 @@
     top: -13px;
     left: 12px;
     content: "";
-    width: 476px;
-    height: 702px;
+    width: 100%;
+    height: 100%;
     border-radius: 250px 250px 0 0;
     border-width: 2px;
     border-color: chartreuse chartreuse transparent transparent;
@@ -502,25 +506,22 @@
 
 .honey-moon__image-container {
     position: relative;
-    margin-right: 184px;
+    margin: 0 90px;
 }
 
 .honey-moon__image-sub {
     position: absolute;
-    width: 141px;
-    height: 141px;
+    width: 40%;
     border-radius: 50%;
     box-shadow: 0 20px 32px #b6b6b6;
 }
 
 .honey-moon__image-sub.honey-moon__image-sub--l{
-    width: 230px;
-    height: 230px;
+    width: 50%;
 }
 
 .honey-moon__image-sub.honey-moon__image-sub--s {
-    width: 74px;
-    height: 74px;
+    width: 30%;
 }
 
 .honey-moon__image-container :nth-child(2) {
@@ -547,8 +548,8 @@
 }
 
 .favorite-booking__banner {
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: 500px;
     position: relative;
 }
 /* Airplane img */
@@ -954,4 +955,105 @@
     text-align: center;
     border-top: 2px solid #d7d7d7a1;
     padding-top: 32px;
+}
+.nav-pc {
+    display: flex;
+    align-items: center;
+}
+/* Mobile Nav*/
+.nav-mobile {
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 360px;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: transform linear 0.2s, opacity linear 0.2s;
+}
+
+.nav-mobile-btn {
+    width: 50px;
+    height: 50px;
+    color: #fff;
+    display: none;
+}
+
+.nav-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0 ,0, 0.3);
+    display: none;
+    animation: fadeIn linear 0.3s;
+}
+
+.header__mobile-navbar-list {
+
+    list-style: none;
+    padding: 8px 16px;
+}
+
+.header__mobile-navbar-item {
+    margin: 16px 0;
+    font-weight: 600;
+}
+
+.header__mobile-navbar-item-link {
+    text-decoration: none;
+    display: block;
+    color: #333;
+}
+
+.nav-mobile-close i{
+    font-size: 1.5em;
+    color: #333;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 26px;
+    height: 26px;
+}
+.header__mobile-navbar-item-icon {
+
+}
+.nav__input:checked ~ .nav-mobile{
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.nav__input:checked ~ .nav-overlay {
+    display: block;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .nav-mobile-btn {
+        display: block;
+        font-size: 2em;
+        text-align: center;
+        margin: auto 0
+    }
+    .nav-pc {
+        display: none;
+    }
+    .header__navbar{
+        justify-content: flex-end;
+    }
+
+    :root {
+        --navbar-height: 4em;
+        --header-height: 25em;
+    }
 }
